Began initial styling of splash screen

--- a/splash.html
+++ b/splash.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html>
 	<head>
-    	<title>CHESS!</title>
+        <title>CHESS!</title>
+
+        <meta charset="UTF-8" />
+        <meta name="description" content="A chess game created by Miranda Keeler and Yawei Li" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        
+        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="splashstylesheet.css" > 
+
     </head>
 
     <body>
@@ -10,8 +18,7 @@
 <!-- top center of the screen, which contains the logo, insert-name, and headers -->
             <section id="top-center">
                 <div class ="header">
-                    <img src="chess.png" alt="Chess piece-pawn"> 
-                    <h1>CHESS! A two player game</h1>
+                    <h1 class="neon"><span class="nowrap"> &#9816; CHESS! <span class="flicker-slow">A two player game</span></span></h1>
                     <h2>This is an online version of the classic, two player chess game. Here you can begin playing by typing in your name and pressing play!</h2>
                 </div>
                 <div class="input">
@@ -33,9 +40,9 @@
 <!-- right of the screen, which contains the statistics in a rectangle -->
             <section id="right">
                 <div class="statistics">
-                    <h3>Games Played</h3>
-                    <h3>Games won</h3>
-                    <h3>Games lost</h3>
+                    <h3 class="stat1">Games Played</h3>
+                    <h3 class="stat2">Games won</h3>
+                    <h3 class="stat3">Games lost</h3>
                 </div>
             </section>
         </main>
