--- a/splash.html
+++ b/splash.html
@@ -18,7 +18,7 @@
 <!-- top center of the screen, which contains the logo, insert-name, and headers -->
             <section id="top-center">
                 <div class ="header">
-                    <h1 class="neon"><span class="nowrap"> &#9816; CHESS! <span class="flicker-slow">A two player game</span></span></h1>
+                    <h1 class="neon"><span class="nowrap"> <span class="icon">&#9816; </span>CHESS! <span class="flicker-slow">A two player game</span></span></h1>
                     <h2>This is an online version of the classic, two player chess game. Here you can begin playing by typing in your name and pressing play!</h2>
                 </div>
                 <div class="input">
