Changed background/font color

--- a/splash.html
+++ b/splash.html
@@ -18,8 +18,8 @@
 <!-- top center of the screen, which contains the logo, insert-name, and headers -->
             <section id="top-center">
                 <div class ="header">
-                    <h1 class="neon"><span class="nowrap"> <span class="icon">&#9816; </span>CHESS! <span class="flicker-slow">A two player game</span></span></h1>
-                    <h2>This is an online version of the classic, two player chess game. Here you can begin playing by typing in your name and pressing play!</h2>
+                    <h1 class="neon"><span class="nowrap"> <span class="icon">&#9816; </span><span class="heading">CHESS! A two player game</span></span></h1>
+                    <h2>This is an online version of the classic two player game, chess. Just type in a username and press PLAY!</h2>
                 </div>
                 <div class="input">
                     <form action="/play" method="get">
@@ -30,7 +30,7 @@
             </section>
 	
 <!-- left side of the screen, which contains the outlined how-to -->
-            <section>
+            <section id="left">
 	            <div class="guide">
                     <h3>Quick How-To Guide</h3>
 		            <p>This is your average game of chess. You will be randomly assigned a color (black or white). Possible moves of pieces will be displayed to you if you click on the piece you would like to move. Check will be announced when you or your opponent has a piece in place to check the other's King. Each player will have a maximum of 5 minutes to make a move. If you do not make a move within this alloted time, you automatically lose. If you abruptly exit the game, nothing will be saved (will not count as a win or lose).</p>
