Linked html files, imported splashsheets

--- a/game.html
+++ b/game.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>CHESS!</title>
+
+        <meta charset="UTF-8" />
+        <meta name="description" content="A chess game created by Miranda Keeler and Yawei Li" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="splashstylesheet.css" > 
     </head>
 
     <body>
@@ -9,14 +16,13 @@
 
 <!-- top center of the screen, which contains the logo, insert-name, and headers -->
             <div id="top-center">
-                <img src="chess.png" alt="Chess piece-pawn">
-                <h1>CHESS! A two player game</h1>
+                <h1 class="neon"><span class="nowrap"> &#9816; <span class="heading2">CHESS! A two player game</span></span></h1>
             </div>
 
 <!-- center of the screen, which contains the timer and the chess board -->
             <section id="center">
 	            <img src="timer2.png" alt="stopwatch">
-	            <h3>Time since last move: </h3>
+	            <h3 class="timer"><span class="nowrap"><span class="icon2">&#128336</span><span class="heading3">Time since last move: </h3>
 	            <div class="chessboard">
                 </div>
             </section>
