--- a/splash.html
+++ b/splash.html
@@ -24,7 +24,7 @@
                 <div class="input">
                     <form action="/play" method="get">
                         Username: <input type="text" name="username"><br>
-                        <button type="submit">PLAY!</button>
+                        <button type="submit"><a href="game.html">PLAY!</a></button>
                     </form>
                 </div>
             </section>
