linked splash.html with css

--- a/public/splash.html
+++ b/public/splash.html
@@ -7,8 +7,8 @@
         <meta name="description" content="A chess game created by Miranda Keeler and Yawei Li" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
-        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="splashstylesheet.css" > 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers">
+        <link rel="stylesheet" href="stylesheets/splashstylesheet.css"> 
 
     </head>
 
