--- a/public/game.html
+++ b/public/game.html
@@ -7,8 +7,8 @@
         <meta name="description" content="A chess game created by Miranda Keeler and Yawei Li" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="splashstylesheet.css" > 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers" >
+        <link rel="stylesheet" href="stylesheets/gamestylesheet.css" > 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script type="text/javascript" src="chess.js"></script>
