--- a/public/splash.html
+++ b/public/splash.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="input">
                     <form action="/play" method="get">
-                        Username: <input type="text" name="username"><br>
+                        Username: <input type="text" id="username"><br>
                         <button type="submit"><a href="game.html">PLAY!</a></button>
                     </form>
                 </div>
