--- a/public/splash.html
+++ b/public/splash.html
@@ -19,7 +19,7 @@
             <section id="top-center">
                 <div class ="header">
                     <h1 class="neon"><span class="nowrap"> <span class="icon">&#9816; </span><span class="heading">CHESS! A two player game</span></span></h1>
-                    <h2>This is an online version of the classic two player game, chess. Just type in a username and press PLAY!</h2>
+                    <h2>This is an online version of the classic two player game, chess. Just type in a username and press PLAY</h2>
                 </div>
                 <div class="input">
                     <form action="/play" method="get">
