--- a/public/game.html
+++ b/public/game.html
@@ -20,20 +20,13 @@
 <!-- top center of the screen, which contains the logo, insert-name, and headers -->
             <div class="header">
                 <h1 class="neon"><span class="nowrap"> &#9816; <span class="heading2">CHESS! A two player game</span></span></h1>
-	            <h2 class="timer"><span class="icon2">&#128336; </span>Time since last move:<span class="time">00:00</span></h2>
+                <h2 class="timer"><span class="nowrap"><span class="icon2">	&#9203</span><span class="heading3">Time since last move: 00:00</h2>
             </div>
-
-<!-- center of the screen, which contains the timer and the chess board -->
-            <section id="center">
-	            <h3 class="timer"><span class="nowrap"><span class="icon2">	&#9203</span><span class="heading3">Time since last move: </h3>
-	            <div class="chessboard">
-                </div>
-            </section>
 
 <!-- left side of the screen, which contains player 1's game statistics in an outlined table -->
             <div class="middle">
                 <div class="stats_black">
-	                <h2>Player 1 - Game Statistics</h2>
+	                <h3>Player 1 Statistics</h3>
                         <h3>Last move</h3>
                         <div class="last">&mdash;</div>
                         <h3>Lost Pieces</h3>
@@ -45,11 +38,11 @@
 
 <!-- right of the screen, which contains player 2's game statistics in an outlined table -->
                 <div class="stats_white">
-                    <h2>Player 2 - Game Statistics</h2>
+                    <h3>Player 2 Statistics</h3>
                     <div class="player2">
-                        <h3>Last move</h3>
+                        <p>Last move</p>
                         <div class="last">&mdash;</div>
-                        <h3>Lost pieces</h3>
+                        <p>Lost pieces</p>
                         <div class="taken">&mdash;</div>
                     </div>
                 </div>
