--- a/public/game.html
+++ b/public/game.html
@@ -24,28 +24,27 @@
             </div>
 
 <!-- left side of the screen, which contains player 1's game statistics in an outlined table -->
-            <div class="middle">
-                <div class="stats_black">
-	                <h3>Player 1 Statistics</h3>
-                        <h3>Last move</h3>
-                        <div class="last">&mdash;</div>
-                        <h3>Lost Pieces</h3>
-                        <div class="last">&mdash;</div>
+            <div class="stats_black">
+                <h3>Player 1 Statistics</h3>
+                    <div class="last">
+                        <p>Last move</p>
+                    </div>
+                    <div class="taken">
+                        <p>Lost Pieces</p>
                     </div>
                 </div>
 
             <div class="board"></div>
 
 <!-- right of the screen, which contains player 2's game statistics in an outlined table -->
-                <div class="stats_white">
-                    <h3>Player 2 Statistics</h3>
-                    <div class="player2">
-                        <p>Last move</p>
-                        <div class="last">&mdash;</div>
-                        <p>Lost pieces</p>
-                        <div class="taken">&mdash;</div>
+            <div class="stats_white">
+                <h3>Player 2 Statistics</h3>
+                    <div class="last">
+                         <p>Last move</p>
                     </div>
-                </div>
+                    <div class="taken">
+                        <p>Lost pieces</p>
+                    </div>
             </div>    
         </main>
     </body>
